--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
 
       <div class="carousel-item">
-        <img src="bo-kaap-street.png" class="d-block w-100 vh-100"
+        <img src="premium-cape-town-transfer-service.jpg" class="d-block w-100 vh-100"
           alt="Bo-Kaap cultural neighborhood in Cape Town">
         <div class="carousel-caption d-flex justify-content-center align-items-center">
           <div class="bg-overlay text-light p-4">
