--- a/virtualtours.html
+++ b/virtualtours.html
@@ -1,243 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- Bootstrap CSS (via CDN) -->
+<head>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Virtual Property Viewing Cape Town | Live Video Tours for Buyers & Nomads</title>
+
+  <meta name="description" content="View properties in Cape Town remotely with a live video call. Our local agent visits the property, shows the area, shares honest insights, and suggests alternatives. Ideal for buyers, investors, and digital nomads.">
+
+  <meta name="keywords" content="virtual property viewing Cape Town, live property tours Cape Town, remote property viewing, buy property in Cape Town remotely, digital nomad relocation Cape Town">
+
+  <link rel="canonical" href="https://www.virtualnomad.com/virtual-property-tours.html">
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 
-  
-
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-
-  <!-- Bootstrap JS (for interactive features) -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- EmailJS SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("bDD9Bs-d_KntBXRt_"); // Replace with your actual Public Key
-    })();
-  </script>
+  <style>
+    .main-header {
+      position: relative;
+      height: 60vh;
+      overflow: hidden;
+    }
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Virtual Nomad - Welcome to Seamless Relocation</title>
-        <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers. Virtual tours, legal support, and cultural orientation all in one place.">
-        <meta name="keywords" content="relocation services, Cape Town, digital nomads, virtual tours, legal support, cultural orientation">
-        <link rel="canonical" href="https://www.virtualnomad.com/">
+    .main-header img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-XXXXX-Y');
-</script>
+    .header-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.45);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: #fff;
+      padding: 20px;
+    }
 
-      </head>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Styles -->
-    <style>
-        /* Navbar Styling */
-        .navbar {
-            padding: 10px 20px;
-        }
+    .header-overlay h1 {
+      font-size: 3rem;
+      font-weight: 700;
+    }
 
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-        }
+    .header-overlay p {
+      font-size: 1.3rem;
+      max-width: 800px;
+    }
 
-        .navbar-brand .logo {
-            height: 40px;
-            width: auto;
-        }
+    .image-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 25px;
+      margin-top: 40px;
+    }
 
-        .navbar-nav .nav-link {
-            margin: 0 10px;
-            font-size: 1rem;
-            text-transform: capitalize;
-        }
+    .image-item {
+      background: #f9f9f9;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.08);
+    }
 
-        .navbar-nav .nav-link.active {
-            font-weight: bold;
-            text-decoration: underline;
-        }
+    .image-item img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
 
-        /* Header Styling */
-        .main-header {
-            position: relative;
-            width: 100%;
-            height: 60vh;
-            overflow: hidden;
-        }
+    .image-item button {
+      background: #0d6efd;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+    }
 
-        .main-header .header-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    footer a {
+      text-decoration: none;
+    }
+  </style>
 
-        .header-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.4);
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        .header-overlay h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-
-        .header-overlay p {
-            font-size: 1.5rem;
-            margin: 0;
-        }
-
-        /* Image Grid Styling */
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            margin: 20px;
-        }
-
-        .image-item {
-            text-align: center;
-            border: 1px solid #ddd;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .image-item img {
-            width: 90%;
-            height: auto;
-            border-radius: 5px;
-        }
-
-        .image-item p {
-            margin-top: 10px;
-            font-size: 1rem;
-            color: #333;
-        }
-
-        .image-item button {
-            margin-top: 10px;
-            padding: 10px 15px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .image-item button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <!-- Logo and Brand Name -->
-            <a class="navbar-brand" href="#">
-                <img src="logo.png" alt="Virtual Nomad Logo" class="logo me-2">
-                <span class="fw-bold text-uppercase">Virtual Nomad</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html#home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html#About Us">About Us</a></li>            
-                <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html">Contact</a></li>
-            </div>
-        </div>
-    </nav>
 
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand fw-bold text-uppercase" href="index.html">
+      Virtual Nomad
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navMenu">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">Virtual Viewings</a></li>
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-    <!-- Header Section -->
-    <header class="main-header">
-        <img src="https://media.istockphoto.com/id/1471444483/photo/customer-satisfaction-survey-concept-users-rate-service-experiences-on-online-application.jpg?s=612x612&w=0&k=20&c=HFh1o4JU68KWv7PXgbLdIZT0_qepmgePEkvbsLJr5p0=" 
-             alt="Virtual Property Tours" 
-             class="header-image">
-        <div class="header-overlay">
-            <h1>Virtual Property Tours</h1>
-            <p>Your Virtual Gateway to Your Dream Home</p>
-        </div>
-    </header>
+<!-- HERO -->
+<header class="main-header">
+  <img src="living-room-in-modern-home.jpg" alt="Live virtual property viewing in Cape Town">
+  <div class="header-overlay">
+    <h1>Live Virtual Property Viewings in Cape Town</h1>
+    <p>
+      We send a trusted local agent to view properties on your behalf —
+      live, honest, and anywhere in Cape Town.
+    </p>
+  </div>
+</header>
 
-    <!-- Main Content Section -->
-    <section class="content-container">
-        <div class="text-content">
-            <h2>Discover Your Perfect Home</h2>
-            <p>
-                Relocating has never been easier! With our Virtual Property Tours, you can explore homes in detail without leaving your current location. Our service is designed to save time, simplify decisions, and provide a seamless relocation experience.
-            </p>
-        </div>
+<!-- CONTENT -->
+<section class="container my-5">
 
-        <!-- Image Grid Section -->
-        <div class="image-grid">
-            <div class="image-item">
-                <img src="https://media.istockphoto.com/id/1569939196/photo/virtual-tour-360-for-real-estate-technology-concept.webp?a=1&b=1&s=612x612&w=0&k=20&c=eU4Id2wPWTAOXLFrNiIX_W5vZEXZ2249lt5OYfFDxlw=" alt="360 Virtual Tour">
-                <p><strong>360° Virtual Tour:</strong> Experience properties in a fully immersive way, helping you visualize spaces as if you were there in person. Perfect for detailed exploration.</p>
-                <button onclick="window.location.href='booking.html'">Book Now</button>
-            </div>
-            <div class="image-item">
-                <img src="https://media.istockphoto.com/id/1045425872/photo/smart-remote-home-control-system-on-a-digital-tablet-device-with-app-icons-minimalist-modern.jpg?s=612x612&w=0&k=20&c=tC7w3cib85vMdf7Lc5Kie3T6iLQisCPX3PQNRoWCb60=" alt="Smart Home Controls">
-                <p><strong>Smart Home Controls:</strong> Discover homes with the latest smart technologies, enabling you to manage lighting, security, and more, all remotely. Experience modern living!</p>
-                <button onclick="window.location.href='booking.html'">Book Now</button>
-            </div>
-            <div class="image-item">
-                <img src="https://media.istockphoto.com/id/1325947407/photo/real-estate-agent-making-a-virtual-tour-of-a-house-on-his-cell-phone.jpg?s=612x612&w=0&k=20&c=StxjYC5J-cGQ88cVR3hC4H4LMS6KM_X6xg1ajPVOLnM=" alt="Agent-Assisted Tours">
-                <p><strong>Agent-Assisted Tours:</strong> Get personalized guidance from experienced agents who understand your needs. Benefit from expert advice to find your dream home.</p>
-                <button onclick="window.location.href='booking.html'">Book Now</button>
-            </div>
-            <div class="image-item">
-                <img src="https://media.istockphoto.com/id/855082256/photo/tourist-guide-app.webp?a=1&b=1&s=612x612&w=0&k=20&c=klYtSi3FnnHy5uL3fUiiDVDg8ZYLWtNQGbucQCZzJBk=" alt="Guided Tour App">
-                <p><strong>Guided Tours:</strong> Use our Expertise to navigate properties efficiently. Access detailed property insights and book tours conveniently from your device.</p>
-                <button onclick="window.location.href='booking.html'">Book Now</button>
-            </div>
-        </div>
-    </section>
+  <h2 class="mb-4">Buy or Rent Property in Cape Town — Without Being Here</h2>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3 mt-5">
-        <p>&copy; 2025 Virtual Nomad Cape Town. All rights reserved.</p>
-        <footer class="bg-dark text-white text-center p-3 mt-5">
-            <nav class="footer-nav">
-                <a href="index.html#heroCarousel" class="text-white me-3">Home</a>
-                <a href="index.html#services" class="text-white me-3">Services</a>
-                <a href="index.html#about" class="text-white me-3">About Us</a>
-                <a href="index.html#contact" class="text-white">Contact Us</a>
-            </nav>        
-        </footer>
+  <p>
+    Our Virtual Property Viewing service is designed for international buyers,
+    investors, and digital nomads who cannot attend property viewings in person.
+    A professional local agent visits the property and connects with you via a live video call.
+  </p>
+
+  <p>
+    During the call, the agent walks through the home in real time, shows the surrounding streets,
+    answers your questions, and shares honest insights about the neighbourhood, pricing,
+    and overall suitability — helping you make confident decisions from anywhere in the world.
+  </p>
+
+  <p class="fw-bold">
+    Perfect for international buyers, investors, and digital nomads relocating to Cape Town.
+  </p>
+
+  <!-- SERVICE GRID -->
+  <div class="image-grid">
+
+    <div class="image-item">
+      <img src="https://media.istockphoto.com/id/1325947407/photo/real-estate-agent-making-a-virtual-tour-of-a-house-on-his-cell-phone.jpg?s=612x612&w=0&k=20&c=StxjYC5J-cGQ88cVR3hC4H4LMS6KM_X6xg1ajPVOLnM=" alt="Property agent honest opinion" alt="Live video property viewing Cape Town">
+      <p><strong>Live Video Property Viewing</strong><br>
+      A real agent walks through the property on a live call, showing layout, finishes,
+      lighting, and surroundings — just like being there.</p>
+      <button onclick="location.href='booking.html'">Book Viewing</button>
+    </div>
+
+    <div class="image-item">
+      <img src="cape-town-neighbourhood-walkthrough.jpg" alt="Cape Town neighbourhood insights">
+      <p><strong>Neighbourhood & Area Insight</strong><br>
+      We show streets, nearby amenities, lifestyle factors, and give real local insight
+      on safety, convenience, and value.</p>
+      <button onclick="location.href='booking.html'">Book Viewing</button>
+    </div>
+
+    <div class="image-item">
+      <img src="alternative-property-suggestions.jpg">
+      <p><strong>Professional Agent Feedback</strong><br>
+      Get honest, on-the-ground opinions — including red flags, pricing insights,
+      and whether the property truly fits your goals.</p>
+      <button onclick="location.href='booking.html'">Book Viewing</button>
+    </div>
+
+    <div class="image-item">
+      <img src="hero-luxury-transfers-cape-town.jpg" alt="Alternative property options Cape Town">
+      <p><strong>Alternative Property Suggestions</strong><br>
+      If the property isn’t right, we suggest better or similar options nearby —
+      saving you time and avoiding costly mistakes.</p>
+      <button onclick="location.href='booking.html'">Book Viewing</button>
+    </div>
+
+  </div>
+
+</section>
+
+<!-- GEO SECTION -->
+<section class="container my-5">
+  <h3>Serving All Areas of Cape Town</h3>
+  <p>
+    We offer virtual property viewings across the entire Cape Town region, including:
+    City Bowl, Sea Point, Green Point, Camps Bay, Waterfront, Woodstock, Observatory,
+    Claremont, Rondebosch, Constantia, Century City, Blouberg, and surrounding suburbs.
+  </p>
+  <p>
+    If the property is in Cape Town — we can view it for you.
+  </p>
+</section>
+
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center p-4">
+  <p class="mb-2">&copy; 2025 Virtual Nomad Cape Town. All rights reserved.</p>
+  <a href="index.html" class="text-white me-3">Home</a>
+  <a href="pricing.html" class="text-white me-3">Pricing</a>
+  <a href="index.html#contact" class="text-white">Contact</a>
+</footer>
+
 </body>
 </html>
