Remove pricing details from package titles

--- a/pricing.html
+++ b/pricing.html
@@ -93,7 +93,7 @@
           <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                   <div class="card-body">
-                      <h5 class="card-title">Basic Package – Starting at $250</h5>
+                      <h5 class="card-title">Basic Package</h5>
                       <ul class="list-unstyled mt-3 mb-4">
                           <li>One virtual property tour (up to 3 properties)</li>
                           <li>Basic legal and logistical guidance</li>
@@ -108,7 +108,7 @@
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Standard Package – Starting at $500</h5>
+                        <h5 class="card-title">Standard Package</h5>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Virtual property tours for up to 5 properties</li>
                             <li>Full legal and logistical support</li>
@@ -124,7 +124,7 @@
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Premium Package – Starting at $800</h5>
+                        <h5 class="card-title">Premium Package</h5>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Unlimited virtual property tours</li>
                             <li>Complete legal and logistical support</li>
