--- a/pricing.html
+++ b/pricing.html
@@ -233,22 +233,32 @@
     </footer>
     
   
-  <!-- Bootstrap JS (via CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
-  <script>
-    function scrollToSection(id) {
-        document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
-    }
-</script>
+  <!-- SCRIPTS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 <script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener("click", function (e) {
-            e.preventDefault();
-            const target = document.querySelector(this.getAttribute("href"));
-            if (target) {
-                target.scrollIntoView({ behavior: "smooth" });
-            }
-        });
+  (function () {
+    emailjs.init("pLWCkusN34A8Sb8S9");
+  })();
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById("contact-form");
+    if (!form) return;
+
+    form.addEventListener("submit", function (event) {
+      event.preventDefault();
+
+      emailjs.sendForm("service_ejvwqzl", "template_c96yqan", this).then(
+        function () {
+          alert("Message Sent Successfully!");
+          form.reset();
+        },
+        function (error) {
+          alert("Failed to send message. Try again! Error: " + JSON.stringify(error));
+        }
+      );
     });
+  });
+</script>
 </script>
