--- a/pricing.html
+++ b/pricing.html
@@ -1,264 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Virtual Nomad - Welcome to Seamless Relocation</title>
-  <meta name="description" content="Relocate to Cape Town effortlessly with our expert relocation services tailored for digital nomads and remote workers. Virtual tours, legal support, and cultural orientation all in one place.">
-  <meta name="keywords" content="relocation services, Cape Town, digital nomads, virtual tours, legal support, cultural orientation">
-  <link rel="canonical" href="https://www.virtualnomad.com/">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-XXXXX-Y');
-</script>
+  <title>Virtual Nomad | Seamless Relocation to Cape Town</title>
 
-</head>
+  <meta name="description" content="Relocate to Cape Town effortlessly with Virtual Nomad. Virtual property tours, agent-led video calls, relocation support and concierge services.">
+  <meta name="keywords" content="Cape Town relocation, virtual property tours, digital nomads, property viewing South Africa">
 
-  <!-- Bootstrap CSS (via CDN) -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-  <link rel="stylesheet" href="../src/styles.css">
-
-  <!-- Bootstrap JS (for interactive features) -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- EmailJS SDK -->
+  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script>
-      (function() {
-          emailjs.init("bDD9Bs-d_KntBXRt_");  // Replace with your actual Public Key
-      })();
-  </script>
 
-<head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* Style for the logo */
     .logo {
-      width: 50px; /* Adjust the size of the logo */
-      height: auto; /* Maintain aspect ratio */
+      width: 45px;
+      height: auto;
     }
   </style>
+</head>
+
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <!-- Logo and Brand Name -->
-    <a class="navbar-brand d-flex align-items-center" href="/">
-      <img src="logo.png" alt="Virtual Nomad Logo" class="logo me-2">
-      <span class="fw-bold text-uppercase">Virtual Nomad</span>
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <img src="logo.png" class="logo me-2" alt="Virtual Nomad">
+      <strong>Virtual Nomad</strong>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+
+    <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="/index.html#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/index.html#services">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="/index.html#about">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="/pricing.html">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- PRICING SECTION -->
+<section class="container py-5">
+  <h1 class="text-center mb-4">Relocation Service Packages</h1>
 
-      <!-- Carousel Controls -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-      </button>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h5>Basic Package</h5>
+          <ul>
+            <li>Up to 3 virtual property tours</li>
+            <li>Agent-led video call</li>
+            <li>Area & lifestyle insights</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h5>Standard Package</h5>
+          <ul>
+            <li>Up to 5 virtual property tours</li>
+            <li>Shortlisted property recommendations</li>
+            <li>Local market advice</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h5>Premium Package</h5>
+          <ul>
+            <li>Unlimited virtual viewings</li>
+            <li>Dedicated relocation agent</li>
+            <li>3 months post-arrival support</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
-<body>
-    <div id="pricing-section" class="container py-5"></div>
-        <h1 class="text-center mb-4">Relocation Service Packages</h1>
-        
-        <div class="row">
-          <!-- Basic Package -->
-          <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                  <div class="card-body">
-                      <h5 class="card-title">Basic Package</h5>
-                      <ul class="list-unstyled mt-3 mb-4">
-                          <li>One virtual property tour (up to 3 properties)</li>
-                          <li>Basic legal and logistical guidance</li>
-                          <li>Cultural orientation guide</li>
-                      </ul>
-                      <button class="btn btn-primary btn-block" onclick="window.location.href='booking.html#booking-section'">Book Now</button>
-                  </div>
-              </div>
-          </div>
 
-            <!-- Standard Package -->
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Standard Package</h5>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>Virtual property tours for up to 5 properties</li>
-                            <li>Full legal and logistical support</li>
-                            <li>One personalized itinerary</li>
-                            <li>One virtual networking event</li>
-                        </ul>
-                        <button class="btn btn-primary btn-block" onclick="window.location.href='booking.html#booking-section'">Book Now</button>
-                    </div>
-                </div>
-            </div>
+<!-- CONTACT -->
+<section id="contact" class="container py-5">
+  <h2 class="text-center mb-4">Contact Us</h2>
 
-            <!-- Premium Package -->
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Premium Package</h5>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>Unlimited virtual property tours</li>
-                            <li>Complete legal and logistical support</li>
-                            <li>Two custom itineraries for local experiences</li>
-                            <li>Ongoing virtual support for three months</li>
-                        </ul>
-                        <button class="btn btn-primary btn-block" onclick="window.location.href='booking.html#booking-section'">Book Now</button>
-                    </div>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-6">
+      <!-- ✅ FIXED FORM -->
+      <form id="contact-form">
+        <div class="mb-3">
+          <label class="form-label">Name</label>
+          <input type="text" class="form-control" name="user_name" required>
         </div>
 
-        <!-- Add-On Services -->
-        <h2 class="text-center my-5">Add-On Services</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Extra Local Experiences</h5>
-                        <p class="card-text">$100 per experience</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Monthly Local Support Subscription</h5>
-                        <p class="card-text">$50/month</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Personal Concierge for Social Integration</h5>
-                        <p class="card-text">$150</p>
-                    </div>
-                </div>
-            </div>
+        <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input type="email" class="form-control" name="user_email" required>
         </div>
+
+        <div class="mb-3">
+          <label class="form-label">Message</label>
+          <textarea class="form-control" name="message" rows="4" required></textarea>
+        </div>
+
+        <button class="btn btn-primary w-100">Send Message</button>
+      </form>
     </div>
-<!-- Contact Section -->
-<section id="contact" class="container mt-5">
-    <h2 class="text-center mb-4">Contact Us</h2>
-    <div class="row">
-      <!-- Contact Form Column -->
-      <div class="col-md-6">
-        <form id="contact-form">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" required>
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" required>
-          </div>
-          <div class="mb-3">
-            <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="3" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary w-100">Send Message</button>
-        </form>
-      </div>
-      <!-- Contact Details Column -->
-      <div class="col-md-6">
-        <div class="p-3 border rounded">
-          <h5>Contact Details</h5>
-          <p><strong>Email:</strong> <a href="mailto:info@virtualnomad.co.za">info@virtualnomad.co.za</a></p>
-          <p><strong>WhatsApp:</strong> <a href="https://wa.me/27815587973" target="_blank">+27 81 558 7973</a></p>
-          <p><strong>Call:</strong> <a href="tel:+27847290664">+27 84 729 0664</a></p>
-          <h5>Follow Us</h5>
-          <p>
-            <a href="https://facebook.com" target="_blank" class="me-2 text-primary">
-              <i class="fab fa-facebook fa-lg"></i>
-            </a>
-            <a href="https://twitter.com" target="_blank" class="me-2 text-info">
-              <i class="fab fa-x-twitter fa-lg"></i>
-            </a>
-            <a href="https://instagram.com" target="_blank" class="text-danger">
-              <i class="fab fa-instagram fa-lg"></i>
-            </a>
-          </p>
-        </div>
 
-         <!-- Map Section (Smaller Map) -->
-      <div class="mt-4">
-        <h5>Our Location</h5>
-        <div class="ratio ratio-4x3">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.7924898836533!2d18.41812317629829!3d-33.928992080652726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc67650d104d19%3A0x4d0e33b4ad9fca30!2sCape%20Town%2C%20South%20Africa!5e0!3m2!1sen!2sza!4v1632994832756!5m2!1sen!2sza" 
-            allowfullscreen="" loading="lazy"></iframe>
-        </div>
+    <div class="col-md-6">
+      <div class="border rounded p-3">
+        <p><strong>Email:</strong> info@virtualnomad.co.za</p>
+        <p><strong>WhatsApp:</strong> +27 81 558 7973</p>
+        <p><strong>Location:</strong> Cape Town, South Africa</p>
       </div>
     </div>
   </div>
-  
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center p-3 mt-5">
-    <p>&copy; 2025 Virtual Nomad Cape Town. All rights reserved.</p>
-    <footer class="bg-dark text-white text-center p-3 mt-5">
-        <nav class="footer-nav">
-            <a href="index.html#heroCarousel" class="text-white me-3">Home</a>
-            <a href="index.html#services" class="text-white me-3">Services</a>
-            <a href="index.html#about" class="text-white me-3">About Us</a>
-            <a href="index.html#contact" class="text-white">Contact Us</a>
-        </nav>        
-    </footer>
-    
-  
-  <!-- SCRIPTS -->
+</section>
+
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center p-3">
+  © 2025 Virtual Nomad Cape Town
+</footer>
+
+<!-- BOOTSTRAP -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
+<!-- EMAILJS SCRIPT -->
 <script>
-  (function () {
-    emailjs.init("pLWCkusN34A8Sb8S9");
-  })();
+  emailjs.init("bDD9Bs-d_KntBXRt_");
 
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById("contact-form");
-    if (!form) return;
+  document.getElementById("contact-form").addEventListener("submit", function(e) {
+    e.preventDefault();
 
-    form.addEventListener("submit", function (event) {
-      event.preventDefault();
-
-      emailjs.sendForm("service_ejvwqzl", "template_c96yqan", this).then(
-        function () {
-          alert("Message Sent Successfully!");
-          form.reset();
-        },
-        function (error) {
-          alert("Failed to send message. Try again! Error: " + JSON.stringify(error));
-        }
-      );
+    emailjs.sendForm(
+      "service_ejvwqzl",
+      "template_c96yqan",
+      this
+    ).then(() => {
+      alert("Message sent successfully!");
+      this.reset();
+    }, (error) => {
+      alert("Error sending message");
+      console.error(error);
     });
   });
 </script>
-</script>
+
+</body>
+</html>
